Wed May 12 12:13:57 PDT 1999 Manish Singh <yosh@gimp.org>

	* acinclude.m4: minor typo fix

	* configure.in: remove waterselect plugin

	* gtkrc: yellow tooltips

	* tools/pdbgen/*: minor cleanups (no functional changes)

Wed May 12 15:14:25 EEST 1999 Lauri Alanko <nether@gimp.org>

	* plug-ins/gfig/gfig.c: Updated calls to gimp_paintbrush to its
 	current pdb interface.
		
Mit Mai 12 01:16:07 MEST 1999 Sven Neumann <sven@gimp.org>

	* plug-ins/Makefile.am
	* plug-ins/waterselect: removed

Tue May 11 22:32:22 MEST 1999 Sven Neumann <sven@gimp.org>

	* tools/pdbgen/pdb/color.pdb
	* app/color_cmds.c: fixed some cut'n'paste errors

	* plug-ins/script-fu/scrips/slide.scm: do the rotation correctly

Tue May 11 11:43:36 MEST 1999 Sven Neumann <sven@gimp.org>

	* modules/colorsel_water.c: small change not worth a ChangeLog entry

Mon May 10 18:28:11 CEST 1999 Marc Lehmann <pcg@goof.com>

        * configure.in: undo the part of patch "Tue May 4 15:51:16 PDT
        1999" which broke gimp-perl configuration completely.

Mon May 10 18:59:58 MEST 1999 Sven Neumann <sven@gimp.org>

	* modules/colorsel_water.c: finally fixed my prob all by myself :)

Sun May  9 23:45:08 MEST 1999 Sven Neumann <sven@gimp.org>

	* modules/colorsel_water.c: Added a pressure slider. Still don't 
	know why the color history is initially drawn in black and is not 
	updated properly.

1999-05-09  Michael Natterer  <mitschel@cs.tu-berlin.de>

	* app/text_tool.c: made the font selection dialog static again, so
	the selected font is remembered across text tool invocations.

1999-05-09  Michael Natterer  <mitschel@cs.tu-berlin.de>

	* libgimp/Makefile.am
	* libgimp/gimplimits.h: new file. Currently contains constants for
	image size and resolution.

	* app/file_new_dialog.c
	* app/resize.c: use the new constants.

	* app/layers_dialog.c: use a sizeentry in the "New Layer" query
	box. Folded the "Layer Fill Type" callbacks into one function.

	* app/text_tool.c
	* app/text_tool_cmds.c